@@ -138,7 +138,7 @@ cairo_surface_destroy (cairo_surface_t *surface)
 
     cairo_surface_finish (surface);
 
-    _cairo_user_data_array_destroy (&surface->user_data);
+    _cairo_user_data_array_fini (&surface->user_data);
 
     free (surface);
 }
